--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
     <footer>
       <p>© 2023 Space Odyssey Exploration.</p>
+      <p>© 2023 Space Odyssey Exploration.</p>
     </footer>
 
 </body>
